# yaatv

./: .editorconfig  .gitattributes  .gitignore  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  THIRD_PARTY_LICENSES.txt  THIRD_PARTY_NOTICES.md  public.key  pyproject.toml
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
docs/: CNAME  index.html  styles.css
src/yaatv/: __init__.py  cli.py
tests/: test_cli.py  test_ffmpeg_integration.py
