[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "yaatv"
version = "0.4.0"
description = "Yet Another Audio To Video: combine audio and cover art into a YouTube-optimized video."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  { name = "cavyion" }
]
dependencies = [
  "mutagen>=1.47",
  "Pillow>=10.0"
]

[project.optional-dependencies]
dev = [
  "bandit[toml]>=1.7",
  "build>=1.2",
  "mypy>=1.13",
  "pip-audit>=2.7",
  "pytest>=8.0",
  "ruff>=0.8",
  "twine>=5.1"
]

[project.scripts]
yaatv = "yaatv.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
  "integration: tests that run external tools such as FFmpeg"
]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = [
  "B",
  "E",
  "F",
  "I",
  "UP"
]

[tool.mypy]
python_version = "3.10"
files = ["src/yaatv"]
check_untyped_defs = true
disallow_untyped_defs = true
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
warn_unused_configs = true

[tool.bandit]
exclude_dirs = ["assets", "build", "dist", "tests"]
skips = [
  "B310",
  "B404",
  "B603"
]
